dont dynamically load stylesheet

--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,7 @@
                 font-size: 2.4em;
             }
         </style>
+        <link rel="stylesheet" href="static/stylesheets/main.css">
     </head>
 
     <body>
