add spinner animation on loading content

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -224,3 +224,40 @@ blockquote time {
     margin: 2.4rem auto 0 auto;
     border-radius: 50%;
 }
+
+
+
+/** Utilities **/
+
+.loader:empty {
+    height: 1.5em;
+    position: relative;
+}
+
+.loader:empty::before {
+    content: "";
+    width: 1.5em;
+    height: 1.5em;
+    border: 3px solid var(--primary-color);
+    border-top-color: transparent;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    position: absolute;
+    top: calc(50% - 1.5em / 2);
+    left: calc(50% - 1.5em / 2);
+    animation: rotate 500ms linear infinite;
+}
+
+
+
+/** Animation Definitions **/
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
