--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
 
             <p>Here are some things that I've worked on recently:</p>
 
-            <ol class="projects"></ol>
+            <ol class="projects loader"></ol>
             <template id="project">
                 {% raw %}
                 <li>
