initial work on idb-mirror module

--- a/views/index.html
+++ b/views/index.html
@@ -79,6 +79,7 @@
             <img class="avatar" src="static/images/avatar.webp" alt="Arnelle Balane">
         </main>
 
+        <script src="static/javascripts/lib/idb-fetch-mirror.js"></script>
         <script src="static/javascripts/main.js"></script>
     </body>
 </html>
