--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@
             <img class="avatar" src="static/images/avatar.webp" alt="Arnelle Balane">
         </main>
 
-        <script src="static/javascripts/lib/idb-fetch-mirror.js"></script>
-        <script src="static/javascripts/main.js"></script>
+        <script defer src="static/javascripts/lib/idb-fetch-mirror.js"></script>
+        <script defer src="static/javascripts/main.js"></script>
     </body>
 </html>
