--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,33 @@
         <title>Arnelle Balane</title>
 
         <link rel="manifest" href="static/manifest.json">
-        <link rel="stylesheet" href="static/stylesheets/main.css">
+
+        <style>
+            html {
+                font-size: 62.5%;
+            }
+
+            body {
+                border: 1rem solid #ffeb3b;
+                margin: 0;
+                font-family: sans-serif;
+                font-size: 1.6rem;
+            }
+
+            .wrapper {
+                width: calc(100vw - 6rem);
+                max-width: 60rem;
+                margin: 0 auto;
+            }
+
+            .site-header {
+                text-align: center;
+            }
+        </style>
+
+        <noscript id="deferred-styles">
+            <link rel="stylesheet" href="static/stylesheets/main.css">
+        </noscript>
     </head>
 
     <body>
