add social discovery meta tags in a partial template

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-    <head>
+    <head itemscope itemtype="http://schema.org/WebSite">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="theme-color" content="#ffeb3b">
@@ -10,6 +10,7 @@
         <link rel="manifest" href="static/manifest.json">
 
         {% include 'partials/critical-css.html' %}
+        {% include 'partials/social-discovery.html' %}
 
         <noscript id="deferred-styles">
             <link rel="stylesheet" href="static/stylesheets/main.css">
