--- a/views/partials/social-discovery.html
+++ b/views/partials/social-discovery.html
@@ -1,6 +1,6 @@
 <meta property="og:title" content="Arnelle Balane" itemprop="name">
 <meta property="og:description" content="Just another Web developer's personal website." itemprop="description">
-<meta property="og:image" content="static/images/icon-192.png">
+<meta property="og:image" content="/static/images/icon-192.png">
 <meta property="og:url" content="https://arnellebalane.com/">
 <meta property="og:type" content="website">
 
@@ -8,7 +8,7 @@
 <meta name="twitter:site" content="@arnellebalane">
 <meta name="twitter:title" content="Arnelle Balane">
 <meta name="twitter:description" content="Just another Web developer's personal website.">
-<meta name="twitter:image" content="static/images/icon-192.png">
+<meta name="twitter:image" content="/static/images/icon-192.png">
 <meta name="twitter:image:alt" content="Arnelle Balane">
 
-<link itemprop="image" href="static/images/icon-192.png">
+<link itemprop="image" href="/static/images/icon-192.png">
