update latest blog post info

--- a/views/index.html
+++ b/views/index.html
@@ -56,10 +56,10 @@
             <p>This is the last thing that I posted in there:</p>
 
             <blockquote cite="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861">
-                <a href="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861" target="_blank" rel="noopener">
-                    Introduction to the Shape Detection API
+                <a href="https://blog.arnellebalane.com/the-credential-management-api-7eb5650d23ca" target="_blank" rel="noopener">
+                    The Credential Management API
                 </a>
-                <time>July 3, 2017</time>
+                <time>August 27, 2017</time>
             </blockquote>
 
             <div class="separator"></div>
