--- a/views/amp/index.html
+++ b/views/amp/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <script async src="https://cdn.ampproject.org/v0.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
 
         <title>Arnelle Balane</title>
         <link rel="canonical" href="https://arnellebalane.com/">
