--- a/views/amp/index.html
+++ b/views/amp/index.html
@@ -69,57 +69,272 @@
                 font: inherit;
                 color: inherit;
             }
+
+            p:not(:first-of-type) {
+                margin-top: 1.5em;
+            }
+
+            p:not(:last-of-type) {
+                margin-bottom: 1.5em;
+            }
+
+            p a {
+                text-decoration: none;
+                text-shadow: 1px 1px 0 var(--primary-color);
+            }
+
+            p a:hover,
+            p a:focus {
+                position: relative;
+                background-color: var(--primary-color);
+            }
+
+            .wrapper {
+                width: calc(100vw - 6rem);
+                max-width: 60rem;
+                padding-bottom: 8rem;
+                margin: 0 auto;
+            }
+
+            .separator {
+                height: 1.6em;
+            }
+
+            .site-header {
+                padding: 8rem 0;
+                text-align: center;
+            }
+
+            .site-header p {
+                margin: 0;
+            }
+
+            .title {
+                margin: 2rem 0 1rem 0;
+                font-family: "Luna", sans-serif;
+                font-size: 2.4em;
+                font-weight: 400;
+            }
+
+            @media all and (max-width: 500px) {
+                .title {
+                    font-size: 1.6em;
+                }
+            }
+
+            .projects {
+                padding: 0 4rem;
+                margin: 1rem 0;
+                list-style: none;
+            }
+
+            .projects li {
+                margin: 1rem 0;
+            }
+
+            .project {
+                display: inline-block;
+                padding-left: 4rem;
+                position: relative;
+                text-decoration: none;
+            }
+
+            .project::before {
+                content: "";
+                width: 3.2rem;
+                height: 3.2rem;
+                position: absolute;
+                top: calc(50% - 3.2rem / 2);
+                left: 0;
+                background: url("../images/sprites.webp") no-repeat;
+                opacity: 0.25;
+            }
+
+            .project.github::before {
+                background-position: 0 0;
+            }
+
+            .project.codepen::before {
+                background-position: -3.2rem 0;
+            }
+
+            .project p {
+                margin: 0;
+            }
+
+            .project p:only-child {
+                margin: calc((4rem - 1.375em) / 2) 0;
+            }
+
+            .project .description {
+                font-size: 0.8em;
+            }
+
+            .project:hover .name,
+            .project:focus .name {
+                display: inline-block;
+                background-color: var(--primary-color);
+            }
+
+            @media all and (max-width: 500px) {
+                .projects {
+                    padding: 0;
+                }
+            }
+
+            blockquote {
+                padding: 0 4rem;
+                margin: 1rem 0;
+                text-align: center;
+            }
+
+            blockquote a {
+                position: relative;
+                font-size: 1.6em;
+                font-weight: 300;
+                text-decoration: none;
+            }
+
+            blockquote a:hover,
+            blockquote a:focus {
+                background-color: var(--primary-color);
+            }
+
+            blockquote a::before,
+            blockquote a::after {
+                margin: 0 0.5rem;
+                position: absolute;
+                font-family: serif;
+                font-size: 1.25em;
+                opacity: 0.25;
+            }
+
+            blockquote a::before {
+                content: "“";
+                right: 100%;
+            }
+
+            blockquote a::after {
+                content: "”";
+                left: 100%;
+            }
+
+            blockquote time {
+                display: block;
+                margin-top: 0.75em;
+                font-size: 0.8em;
+            }
+
+            @media all and (max-width: 500px) {
+                blockquote {
+                    padding: 0;
+                }
+            }
+
+            .no-talk {
+                padding: 0 8rem 0 4rem;
+                font-size: 0.8em;
+            }
+
+            @media all and (max-width: 500px) {
+                .no-talk {
+                    padding: 0;
+                }
+            }
+
+            .avatar-label {
+                text-align: center;
+            }
+
+            .avatar {
+                display: block;
+                width: 8rem;
+                height: 8rem;
+                margin: 2.4rem auto 0 auto;
+                border-radius: 50%;
+            }
+
+            .loader:empty {
+                height: 1.5em;
+                position: relative;
+            }
+
+            .loader:empty::before {
+                content: "";
+                width: 1.5em;
+                height: 1.5em;
+                border: 3px solid var(--primary-color);
+                border-top-color: transparent;
+                border-bottom-color: transparent;
+                border-radius: 50%;
+                position: absolute;
+                top: calc(50% - 1.5em / 2);
+                left: calc(50% - 1.5em / 2);
+                animation: rotate 500ms linear infinite;
+            }
+
+            @keyframes rotate {
+                from {
+                    transform: rotate(0deg);
+                }
+
+                to {
+                    transform: rotate(360deg);
+                }
+            }
         </style>
     </head>
 
     <body>
-        <header class="site-header">
-            <p>Hello, my name is</p>
-            <h1 class="title">Arnelle Balane</h1>
-            <p>I'm just another Web Developer</p>
-        </header>
+        <main class="wrapper">
+            <header class="site-header">
+                <p>Hello, my name is</p>
+                <h1 class="title">Arnelle Balane</h1>
+                <p>I'm just another Web Developer</p>
+            </header>
 
-        <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener">Github</a> profile. I love Javascript and the Web, so you'll see mostly Web-related projects where I build awesome things with different Web APIs and other tech.</p>
+            <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener">Github</a> profile. I love Javascript and the Web, so you'll see mostly Web-related projects where I build awesome things with different Web APIs and other tech.</p>
 
-        <p>I also do frontend work, as you'll see in my <a href="https://codepen.io/arnellebalane" target="_blank" rel="noopener">Codepen</a> profile. If you want to know how I built those, you can check out my live streams and videos over at my <a href="https://www.youtube.com/channel/UC3-k6RL1rVSXzHI8IU7u3NA" target="_blank" rel="noopener">Youtube</a> and <a href="http://liveedu.tv/arnellebalane/" target="_blank" rel="noopener">LiveEdu.tv</a> channels.</p>
+            <p>I also do frontend work, as you'll see in my <a href="https://codepen.io/arnellebalane" target="_blank" rel="noopener">Codepen</a> profile. If you want to know how I built those, you can check out my live streams and videos over at my <a href="https://www.youtube.com/channel/UC3-k6RL1rVSXzHI8IU7u3NA" target="_blank" rel="noopener">Youtube</a> and <a href="http://liveedu.tv/arnellebalane/" target="_blank" rel="noopener">LiveEdu.tv</a> channels.</p>
 
-        <p>Here are some things that I've worked on recently:</p>
+            <p>Here are some things that I've worked on recently:</p>
 
-        <ol class="projects"></ol>
+            <ol class="projects"></ol>
 
-        <div class="separator"></div>
+            <div class="separator"></div>
 
-        <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested in reading some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener">my blog</a>.</p>
+            <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested in reading some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener">my blog</a>.</p>
 
-        <p>This is the last thing that I posted in there:</p>
+            <p>This is the last thing that I posted in there:</p>
 
-        <blockquote cite="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861">
-            <a href="https://blog.arnellebalane.com/the-credential-management-api-7eb5650d23ca" target="_blank" rel="noopener">
-                The Credential Management API
-            </a>
-            <time>August 27, 2017</time>
-        </blockquote>
+            <blockquote cite="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861">
+                <a href="https://blog.arnellebalane.com/the-credential-management-api-7eb5650d23ca" target="_blank" rel="noopener">
+                    The Credential Management API
+                </a>
+                <time>August 27, 2017</time>
+            </blockquote>
 
-        <div class="separator"></div>
+            <div class="separator"></div>
 
-        <p>Occasionally, I give talks and do workshops about Web-related technologies like Javascript, Firebase, or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopener">Speaker Deck</a>.</p>
+            <p>Occasionally, I give talks and do workshops about Web-related technologies like Javascript, Firebase, or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopener">Speaker Deck</a>.</p>
 
-        <p class="no-talk">Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
+            <p class="no-talk">Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
 
-        <div class="separator"></div>
+            <div class="separator"></div>
 
-        <p>Here are other links that you might be interested in (they all lead to me):
-            <a href="https://stackoverflow.com/users/story/1343333" target="_blank" rel="noopener">StackOverflow</a>,
-            <a href="https://www.linkedin.com/in/arnellebalane/" target="_blank" rel="noopener">LinkedIn</a>,
-            <a href="https://twitter.com/arnellebalane" target="_blank" rel="noopener">Twitter</a>.
-        </p>
+            <p>Here are other links that you might be interested in (they all lead to me):
+                <a href="https://stackoverflow.com/users/story/1343333" target="_blank" rel="noopener">StackOverflow</a>,
+                <a href="https://www.linkedin.com/in/arnellebalane/" target="_blank" rel="noopener">LinkedIn</a>,
+                <a href="https://twitter.com/arnellebalane" target="_blank" rel="noopener">Twitter</a>.
+            </p>
 
-        <p>If there's anything that you would like to tell me, you can email me at <a href="mailto:arnellebalane@gmail.com">arnellebalane@gmail.com</a>.</p>
+            <p>If there's anything that you would like to tell me, you can email me at <a href="mailto:arnellebalane@gmail.com">arnellebalane@gmail.com</a>.</p>
 
-        <div class="separator"></div>
+            <div class="separator"></div>
 
-        <p class="avatar-label">Oh and by the way, this is what I look like:</p>
+            <p class="avatar-label">Oh and by the way, this is what I look like:</p>
 
-        <amp-img src="static/images/avatar.webp" alt="Arnelle Balane" width="80" height="80">
+            <amp-img class="avatar" src="static/images/avatar.webp" alt="Arnelle Balane" width="80" height="80">
+        </main>
     </body>
 </html>
