link amp page fro non-amp template

--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
         <title>Arnelle Balane</title>
 
         <link rel="manifest" href="static/manifest.json">
+        <link rel="amphtml" href="https://arnellebalane.com/amp">
 
         {% include 'partials/critical-css.html' %}
         {% include 'partials/social-discovery.html' %}
