add theme-color meta tag to amp page

--- a/views/amp/index.html
+++ b/views/amp/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <script async src="https://cdn.ampproject.org/v0.js"></script>
         <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1">
+        <meta name="theme-color" content="#ffeb3b">
 
         <title>Arnelle Balane</title>
         <link rel="canonical" href="https://arnellebalane.com/">
