move utils functions into separate file

--- a/views/index.html
+++ b/views/index.html
@@ -86,6 +86,7 @@
 
         <script type="module" src="static/javascripts/modules/main.js"></script>
         <script defer nomodule src="static/javascripts/lib/idb-fetch-mirror.js"></script>
+        <script defer nomodule src="static/javascripts/lib/utils.js"></script>
         <script defer nomodule src="static/javascripts/main.js"></script>
     </body>
 </html>
