add fallback png image for avatar.webp

--- a/views/index.html
+++ b/views/index.html
@@ -81,7 +81,10 @@
 
             <p class="avatar-label">Oh and by the way, this is what I look like:</p>
 
-            <img class="avatar" src="static/images/avatar.webp" alt="Arnelle Balane">
+            <picture class="avatar">
+                <source srcset="static/images/avatar.webp" type="image/webp">
+                <img class="avatar" src="static/images/avatar.png" alt="Arnelle Balane">
+            </picture>
         </main>
 
         <script type="module" src="static/javascripts/modules/main.js"></script>
