--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -130,7 +130,7 @@ p a:focus {
     position: absolute;
     top: calc(50% - 3.2rem / 2);
     left: 0;
-    background: url("../images/sprites.webp") no-repeat;
+    background: url("../images/sprites.png") no-repeat;
     opacity: 0.25;
 }
 
