update client-side js to fetch and render medium data

--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
 
             <p>This is the last thing that I posted in there:</p>
 
-            <blockquote cite="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861">
+            <blockquote class="latest-post" cite="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861">
                 <a href="https://blog.arnellebalane.com/the-credential-management-api-7eb5650d23ca" target="_blank" rel="noopener">
                     The Credential Management API
                 </a>
