--- a/views/index.html
+++ b/views/index.html
@@ -54,12 +54,15 @@
 
             <p>This is the last thing that I posted in there:</p>
 
-            <blockquote class="latest-post" cite="https://blog.arnellebalane.com/introduction-to-the-shape-detection-api-e07425396861">
-                <a href="https://blog.arnellebalane.com/the-credential-management-api-7eb5650d23ca" target="_blank" rel="noopener">
-                    The Credential Management API
-                </a>
-                <time>August 27, 2017</time>
-            </blockquote>
+            <p class="latest-post-placeholder loader"></p>
+            <template id="latest-post">
+                {% raw %}
+                <blockquote class="latest-post" cite="{{ url }}">
+                    <a href="{{ url }}" target="_blank" rel="noopener">{{ title }}</a>
+                    <time>{{ date }}</time>
+                </blockquote>
+                {% endraw %}
+            </template>
 
             <div class="separator"></div>
 
