--- a/views/amp/index.html
+++ b/views/amp/index.html
@@ -147,7 +147,7 @@
                 position: absolute;
                 top: calc(50% - 3.2rem / 2);
                 left: 0;
-                background: url("static/images/sprites.webp") no-repeat;
+                background: url("static/images/sprites.png") no-repeat;
                 opacity: 0.25;
             }
 
