--- a/views/index.html
+++ b/views/index.html
@@ -52,8 +52,8 @@
 
             <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested in reading some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener">my blog</a>.</p>
 
-            <p class="subscribed">You can <a class="subscribe" href="#">subscribe</a> to push notifications if you want to be notified whenever I publish a new article.</p>
-            <p class="unsubscribed">You are already subscribed to push notifications and will get notified whenever I publish a new article. <small>Unsubscribe.</small></p>
+            <p class="unsubscribed hidden">You can <a href="#">subscribe</a> to push notifications if you want to be notified whenever I publish a new article.</p>
+            <p class="subscribed hidden">You are already subscribed to push notifications and will get notified whenever I publish a new article. <a href="#">Unsubscribe.</a></p>
 
             <p>This is the latest post that I published:</p>
 
