add non-modules version of push notifications code

--- a/views/index.html
+++ b/views/index.html
@@ -96,6 +96,7 @@
         <script type="module" src="static/javascripts/modules/main.js"></script>
         <script defer nomodule src="static/javascripts/regular/lib/idb-fetch-mirror.js"></script>
         <script defer nomodule src="static/javascripts/regular/lib/utils.js"></script>
+        <script defer nomodule src="static/javascripts/regular/lib/push-notifications.js"></script>
         <script defer nomodule src="static/javascripts/regular/main.js"></script>
     </body>
 </html>
