--- a/views/amp/index.html
+++ b/views/amp/index.html
@@ -328,7 +328,11 @@
 
             <p>Occasionally, I give talks and do workshops about Web-related technologies like Javascript, Firebase, or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopener">Speaker Deck</a>.</p>
 
-            <p class="no-talk">Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
+            {% if upcomingTalk %}
+                <p class="upcoming-talk">I will be in <a href="{{ upcomingTalk.event_url }}" rel="noopener">{{ upcomingTalk.event }}</a> on {{ upcomingTalk.date }} to share about <strong>{{ upcomingTalk.topic }}</strong>. See you there!</p>
+            {% else %}
+                <p class="no-talk">Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
+            {% endif %}
 
             <div class="separator"></div>
 
