--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
 
         <title>Arnelle Balane</title>
 
-        <link rel="manifest" href="static/manifest.json">
+        <link rel="manifest" href="static/manifest.webmanifest">
         <link rel="amphtml" href="https://arnellebalane.com/amp">
 
         {% include 'partials/critical-css.html' %}
