add description metatag

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="theme-color" content="#ffeb3b">
+        <meta name="description" content="Personal website of Arnelle Balane">
 
         <title>Arnelle Balane</title>
 
