fix typo 'noreferer' to 'noreferrer'

--- a/views/amp/index.html
+++ b/views/amp/index.html
@@ -294,16 +294,16 @@
                 <p>I'm just another Web Developer</p>
             </header>
 
-            <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferer">Github</a> profile. I love Javascript and the Web, so you'll see mostly Web-related projects where I build awesome things with different Web APIs and other tech.</p>
+            <p>Just like other developers, I write code. They're all scattered across the Internet, but you can find most of the cool ones in my <a href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Github</a> profile. I love Javascript and the Web, so you'll see mostly Web-related projects where I build awesome things with different Web APIs and other tech.</p>
 
-            <p>I also do frontend work, as you'll see in my <a href="https://codepen.io/arnellebalane" target="_blank" rel="noopener noreferer">Codepen</a> profile. If you want to know how I built those, you can check out my live streams and videos over at my <a href="https://www.youtube.com/channel/UC3-k6RL1rVSXzHI8IU7u3NA" target="_blank" rel="noopener noreferer">Youtube</a> and <a href="http://liveedu.tv/arnellebalane/" target="_blank" rel="noopener noreferer">LiveEdu.tv</a> channels.</p>
+            <p>I also do frontend work, as you'll see in my <a href="https://codepen.io/arnellebalane" target="_blank" rel="noopener noreferrer">Codepen</a> profile. If you want to know how I built those, you can check out my live streams and videos over at my <a href="https://www.youtube.com/channel/UC3-k6RL1rVSXzHI8IU7u3NA" target="_blank" rel="noopener noreferrer">Youtube</a> and <a href="http://liveedu.tv/arnellebalane/" target="_blank" rel="noopener noreferrer">LiveEdu.tv</a> channels.</p>
 
             <p>Here are some things that I've worked on recently:</p>
 
             <ol class="projects">
                 {% for project in projects %}
                     <li>
-                        <a class="project github" href="{{ project.url }}" target="_blank" rel="noopener noreferer">
+                        <a class="project github" href="{{ project.url }}" target="_blank" rel="noopener noreferrer">
                             <p class="name">{{ project.name }}</p>
                             {% if project.description %}
                                 <p class="description">{{ project.description }}</p>
@@ -315,21 +315,21 @@
 
             <div class="separator"></div>
 
-            <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested in reading some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener noreferer">my blog</a>.</p>
+            <p>I also write blog posts about random things that I learned or tried out recently. They're mostly Web stuff. If you're interested in reading some of them, you can do so at <a href="http://blog.arnellebalane.com/" target="_blank" rel="noopener noreferrer">my blog</a>.</p>
 
             <p>This is the last thing that I posted in there:</p>
 
             <blockquote cite="{{ latestPost.url }}">
-                <a href="{{ latestPost.url }}" target="_blank" rel="noopener noreferer">{{ latestPost.title }}</a>
+                <a href="{{ latestPost.url }}" target="_blank" rel="noopener noreferrer">{{ latestPost.title }}</a>
                 <time>{{ latestPost.date }}</time>
             </blockquote>
 
             <div class="separator"></div>
 
-            <p>Occasionally, I give talks and do workshops about Web-related technologies like Javascript, Firebase, or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopener noreferer">Speaker Deck</a>.</p>
+            <p>Occasionally, I give talks and do workshops about Web-related technologies like Javascript, Firebase, or Progressive Web Apps. You can find slides I used for my previous talks in <a href="https://speakerdeck.com/arnellebalane" target="_blank" rel="noopener noreferrer">Speaker Deck</a>.</p>
 
             {% if upcomingTalk %}
-                <p class="upcoming-talk">I will be in <a href="{{ upcomingTalk.event_url }}" rel="noopener noreferer">{{ upcomingTalk.event }}</a> on {{ upcomingTalk.date }} to share about <strong>{{ upcomingTalk.topic }}</strong>. See you there!</p>
+                <p class="upcoming-talk">I will be in <a href="{{ upcomingTalk.event_url }}" rel="noopener noreferrer">{{ upcomingTalk.event }}</a> on {{ upcomingTalk.date }} to share about <strong>{{ upcomingTalk.topic }}</strong>. See you there!</p>
             {% else %}
                 <p class="no-talk">Supposedly this paragraph will tell you about my upcoming talk, but I don't have one at the moment.</p>
             {% endif %}
@@ -337,9 +337,9 @@
             <div class="separator"></div>
 
             <p>Here are other links that you might be interested in (they all lead to me):
-                <a href="https://stackoverflow.com/users/story/1343333" target="_blank" rel="noopener noreferer">StackOverflow</a>,
-                <a href="https://www.linkedin.com/in/arnellebalane/" target="_blank" rel="noopener noreferer">LinkedIn</a>,
-                <a href="https://twitter.com/arnellebalane" target="_blank" rel="noopener noreferer">Twitter</a>.
+                <a href="https://stackoverflow.com/users/story/1343333" target="_blank" rel="noopener noreferrer">StackOverflow</a>,
+                <a href="https://www.linkedin.com/in/arnellebalane/" target="_blank" rel="noopener noreferrer">LinkedIn</a>,
+                <a href="https://twitter.com/arnellebalane" target="_blank" rel="noopener noreferrer">Twitter</a>.
             </p>
 
             <p>If there's anything that you would like to tell me, you can email me at <a href="mailto:arnellebalane@gmail.com">arnellebalane@gmail.com</a>.</p>
