--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: "Luna";
-    src: url("../fonts/Luna.subset.woff") format("woff");
+    src: local("Luna"),
+        url("../fonts/Luna.subset.woff") format("woff");
     font-display: block;
     unicode-range: U+0041, U+0042, U+0061, U+0065 U+006C, U+006E, U+0072;
 }
@@ -8,7 +9,8 @@
 @font-face {
     font-family: "Open Sans";
     font-weight: 300;
-    src: url("../fonts/OpenSansLight.subset.woff") format("woff");
+    src: local("Open Sans"),
+        url("../fonts/OpenSansLight.subset.woff") format("woff");
     font-display: block;
     unicode-range: U+0021-007E;
 }
@@ -16,7 +18,8 @@
 @font-face {
     font-family: "Open Sans";
     font-weight: 400;
-    src: url("../fonts/OpenSansRegular.subset.woff") format("woff");
+    src: local("Open Sans"),
+        url("../fonts/OpenSansRegular.subset.woff") format("woff");
     font-display: block;
     unicode-range: U+0021-007E;
 }
