--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,9 @@
         {% include 'partials/critical-css.html' %}
         {% include 'partials/social-discovery.html' %}
 
+        <link rel="preload" href="static/fonts/Luna.subset.woff" type="font/woff" as="font" crossorigin>
+        <link rel="preload" href="static/fonts/OpenSansRegular.subset.woff" type="font/woff" as="font" crossorigin>
+        <link rel="preload" href="static/fonts/OpenSansLight.subset.woff" type="font/woff" as="font" crossorigin>
         <link rel="stylesheet" href="static/stylesheets/main.css">
     </head>
 
