--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -2,7 +2,7 @@
     font-family: "Luna";
     src: local("Luna"),
         url("../fonts/Luna.subset.woff") format("woff");
-    font-display: block;
+    font-display: swap;
     unicode-range: U+0041, U+0042, U+0061, U+0065 U+006C, U+006E, U+0072;
 }
 
@@ -11,7 +11,7 @@
     font-weight: 300;
     src: local("Open Sans"),
         url("../fonts/OpenSansLight.subset.woff") format("woff");
-    font-display: block;
+    font-display: fallback;
     unicode-range: U+0021-007E;
 }
 
@@ -20,7 +20,7 @@
     font-weight: 400;
     src: local("Open Sans"),
         url("../fonts/OpenSansRegular.subset.woff") format("woff");
-    font-display: block;
+    font-display: fallback;
     unicode-range: U+0021-007E;
 }
 
