add dark mode styles

--- a/source/index.css
+++ b/source/index.css
@@ -7,17 +7,27 @@
 
 html {
     --primary-color: #ffeb3b;
+    --border-color: var(--primary-color);
+    --text-color: #333;
+    --background-color: #fff;
 
     font-size: 62.5%;
 }
 
+html.dark {
+    --border-color: #ccc;
+    --text-color: #ccc;
+    --background-color: #181818;
+}
+
 body {
     min-height: 100vh;
-    border: 1rem solid var(--primary-color);
+    border: 1rem solid var(--border-color);
     font-family: "Open Sans", sans-serif;
     font-size: 1.6rem;
     -webkit-font-smoothing: antialiased;
-    color: #333;
+    color: var(--text-color);
+    background-color: var(--background-color);
 }
 
 a,
@@ -44,6 +54,16 @@ p a:hover,
 p a:focus {
     position: relative;
     background-color: var(--primary-color);
+}
+
+html.dark p a {
+    text-shadow: none;
+    color: var(--primary-color);
+}
+
+html.dark p a:hover,
+html.dark p a:focus {
+    color: var(--background-color);
 }
 
 p strong {
@@ -147,6 +167,11 @@ p strong {
     background-color: var(--primary-color);
 }
 
+html.dark .project:hover .name,
+html.dark .project:focus .name {
+    color: var(--background-color);
+}
+
 @media all and (max-width: 500px) {
     .projects {
         padding: 0;
@@ -182,6 +207,11 @@ blockquote a {
 blockquote a:hover,
 blockquote a:focus {
     background-color: var(--primary-color);
+}
+
+html.dark blockquote a:hover,
+html.dark blockquote a:focus {
+    color: var(--background-color);
 }
 
 blockquote a::before,
