--- a/source/index.css
+++ b/source/index.css
@@ -1,3 +1,29 @@
+@font-face {
+    font-family: "Luna";
+    src: local("Luna"),
+        url("fonts/Luna.subset.woff") format("woff");
+    font-display: block;
+    unicode-range: U+0041, U+0042, U+0061, U+0065 U+006C, U+006E, U+0072;
+}
+
+@font-face {
+    font-family: "Open Sans";
+    font-weight: 300;
+    src: local("Open Sans Light"),
+        url("fonts/OpenSansLight.subset.woff") format("woff");
+    font-display: block;
+    unicode-range: U+0021-007E;
+}
+
+@font-face {
+    font-family: "Open Sans";
+    font-weight: 400;
+    src: local("Open Sans"),
+        url("fonts/OpenSansRegular.subset.woff") format("woff");
+    font-display: block;
+    unicode-range: U+0021-007E;
+}
+
 *,
 *::before,
 *::after {
