--- a/source/index.css
+++ b/source/index.css
@@ -1,27 +1,24 @@
 @font-face {
     font-family: "Luna";
-    src: local("Luna"),
-        url("fonts/Luna.subset.woff") format("woff");
+    src: local("Luna"), url("fonts/Luna.subset.woff") format("woff");
     font-display: block;
-    unicode-range: U+0041, U+0042, U+0061, U+0065 U+006C, U+006E, U+0072;
+    unicode-range: u+0041, u+0042, u+0061, u+0065 u+006c, u+006e, u+0072;
 }
 
 @font-face {
     font-family: "Open Sans";
     font-weight: 300;
-    src: local("Open Sans Light"),
-        url("fonts/OpenSansLight.subset.woff") format("woff");
+    src: local("Open Sans Light"), url("fonts/OpenSansLight.subset.woff") format("woff");
     font-display: block;
-    unicode-range: U+0021-007E;
+    unicode-range: u+0021-007e;
 }
 
 @font-face {
     font-family: "Open Sans";
     font-weight: 400;
-    src: local("Open Sans"),
-        url("fonts/OpenSansRegular.subset.woff") format("woff");
+    src: local("Open Sans"), url("fonts/OpenSansRegular.subset.woff") format("woff");
     font-display: block;
-    unicode-range: U+0021-007E;
+    unicode-range: u+0021-007e;
 }
 
 *,
@@ -34,15 +31,15 @@
 html {
     --primary-color: #ffeb3b;
     --border-color: var(--primary-color);
-    --text-color: #333;
-    --background-color: #fff;
+    --text-color: #333333;
+    --background-color: #ffffff;
 
     font-size: 62.5%;
 }
 
 html.dark {
-    --border-color: #ccc;
-    --text-color: #ccc;
+    --border-color: #cccccc;
+    --text-color: #cccccc;
     --background-color: #181818;
 }
 
@@ -95,7 +92,7 @@ html.dark p a:focus {
 }
 
 p strong {
-    color: #666;
+    color: #666666;
 }
 
 .wrapper {
@@ -110,9 +107,8 @@ p strong {
 }
 
 .hidden {
-    display: none !important;
+    display: none;
 }
-
 
 /** Header **/
 
@@ -126,7 +122,7 @@ p strong {
 }
 
 .title {
-    margin: 2rem 0 1rem 0;
+    margin: 2rem 0 1rem;
     font-family: "Luna", sans-serif;
     font-size: 2.4em;
     font-weight: 400;
@@ -162,7 +158,6 @@ html.dark .toggle-theme {
         font-size: 1.6em;
     }
 }
-
 
 /** Projects **/
 
@@ -236,17 +231,16 @@ html.dark .project:focus .name {
     }
 }
 
-
 /** Blog **/
 
 .subscribed a {
     text-shadow: none;
-    color: #aaa;
+    color: #aaaaaa;
 }
 
 .subscribed a:hover,
 .subscribed a:focus {
-    background-color: #eee;
+    background-color: #eeeeee;
 }
 
 blockquote {
@@ -303,7 +297,6 @@ blockquote time {
     }
 }
 
-
 /** Talk **/
 
 .no-upcoming-talk {
@@ -317,7 +310,6 @@ blockquote time {
     }
 }
 
-
 /** Avatar **/
 
 .avatar-label {
@@ -328,6 +320,6 @@ blockquote time {
     display: block;
     width: 8rem;
     height: 8rem;
-    margin: 2.4rem auto 0 auto;
+    margin: 2.4rem auto 0;
     border-radius: 50%;
 }
