--- a/source/components/Header/Header.css
+++ b/source/components/Header/Header.css
@@ -5,12 +5,15 @@
     padding-bottom: 0;
 }
 
+.avatarLink {
+    margin-right: 1.6rem;
+}
+
 .avatar {
     display: block;
     width: 3.6rem;
     height: 3.6rem;
     border-radius: 50%;
-    margin-right: 1.6rem;
 }
 
 .title {
