--- a/source/components/Menu/Menu.css
+++ b/source/components/Menu/Menu.css
@@ -4,8 +4,11 @@
     top: 6rem;
     left: 0;
     right: 0;
-    bottom: 0;
     background-color: #fff;
+}
+
+.hidden {
+    display: none;
 }
 
 .link {
