Add hero section in home page

--- a/source/index.njk
+++ b/source/index.njk
@@ -5,11 +5,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="stylesheets/index.css">
+        <link rel="stylesheet" href="stylesheets/home.css">
 
         <title>Arnelle Balane</title>
     </head>
 
     <body>
-        <h1>Hey, I'm Arnelle!</h1>
+        <header class="Header l-Wrapper">
+            <h1 class="SiteName">Hey, I'm Arnelle!</h1>
+
+            <nav class="Navigation">
+                <a class="Navigation__Item" href="/articles">Articles</a>
+                <a class="Navigation__Item" href="/projects">Projects</a>
+                <a class="Navigation__Item" href="/events">Events</a>
+            </nav>
+        </header>
+
+        <section class="Hero l-Wrapper l-LeftTwoThirds">
+            <img class="Avatar" src="images/avatar.jpg" alt="Arnelle Balane">
+
+            <div class="Hero__Details">
+                <h2 class="Hero__Title">Web Developer from <strong>Cebu, Philippines</strong></h2>
+
+                <p>I love experimenting with and sharing about cool new Web technologies and techniques.</p>
+                <p>I'm <strong>@arnellebalane</strong> on
+                    <a class="SocialIcon SocialIcon--github" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Github</a>
+                    <a class="SocialIcon SocialIcon--twitter" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Twitter</a>
+                    <a class="SocialIcon SocialIcon--devto" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Dev.to</a>
+                    <a class="SocialIcon SocialIcon--instagram" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">Instagram</a>
+                    <a class="SocialIcon SocialIcon--linkedin" href="https://github.com/arnellebalane" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                </p>
+            </div>
+        </section>
     </body>
 </html>
